# bartlett

./: .ghci  .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  HLint.hs  LICENSE  Makefile  README.md  bartlett.cabal  package.yaml  stack.yaml
app/: Main.hs
src/Bartlett/: Configuration.hs  Network.hs  Parsers.hs  Types.hs  Util.hs
src/Bartlett/Actions/: Artifact.hs  Build.hs  Config.hs  Info.hs  Log.hs
test/: ReplSugar.hs  Spec.hs  Tasty.hs
test/Bartlett/: TypesSpec.hs  UtilSpec.hs
test/Bartlett/Actions/: InfoSpec.hs
