name:                bartlett
version:             0.9.1
synopsis:            The Jenkins command-line tool to serve your needs.
description:         Please see README.md
homepage:            https://github.com/Nike-inc/bartlett
license:             BSD3
license-file:        LICENSE
author:              Fernando Freire
maintainer:          fernando.freire@nike.com
copyright:           2016 Nike, Inc.
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bartlett.Types,
                       Bartlett.Util,
                       Bartlett.Parsers,
                       Bartlett.Network,
                       Bartlett.Configuration,
                       Bartlett.Actions.Info,
                       Bartlett.Actions.Build
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-missing-signatures
    -fwarn-name-shadowing
    -fwarn-incomplete-patterns
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       wreq,
                       configurator,
                       filepath,
                       bytestring,
                       lens,
                       optparse-applicative,
                       aeson,
                       aeson-pretty,
                       lens-aeson,
                       text,
                       http-types,
                       http-client

executable bartlett
  main-is:             app/Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
                       bartlett,
                       bytestring,
                       optparse-applicative,
                       keyring

test-suite bartlett-test
  type:                    exitcode-stdio-1.0
  hs-source-dirs:          test
  other-modules:           Bartlett.TypesSpec,
                           Bartlett.UtilSpec,
                           Bartlett.Actions.InfoSpec
  main-is:                 Spec.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  default-language:        Haskell2010
  default-extensions:      OverloadedStrings
  build-depends:           base >= 4.7 && < 5,
                           hscolour,
                           bartlett,
                           hspec,
                           bytestring,
                           aeson,
                           wreq,
                           http-types,
                           lens
